--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "tsc"
+    "check": "tsc",
+    "build:gh-pages": "vite build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
