--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "tsc",
-    "build:gh-pages": "vite build"
+    "build:gh-pages": "cross-env VITE_BASE_PATH=/Admin-Hub/ vite build",
+    "predeploy": "npm run build:gh-pages",
+    "deploy": "gh-pages -d dist --dotfiles"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -73,7 +75,6 @@
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
     "browserslist": "^4.24.0",
-    "caniuse-lite": "^1.0.30001763",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "typescript": "5.6.3",
