--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
     "browserslist": "^4.24.0",
+    "cross-env": "^10.1.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "typescript": "5.6.3",
